<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
  <!--      <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:src="@drawable/rec_bg"/>-->

        <com.avash.notekeeper.utlis.MSPTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:textSize="30sp"
            android:textColor="#FDFDFD"
            android:text = "@string/app_name" />

        <com.avash.notekeeper.utlis.MSPTextViewBold
            android:id="@+id/test112"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#FDFDFD"
            android:text = "Welcome Back!"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            />
    </FrameLayout>



    <com.avash.notekeeper.utlis.MSPTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        android:text="Log in to continue"
        android:textColor="#67676B"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:boxStrokeWidth="2dp"
            style="@style/AppTheme"
            app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/et_hint_email_id"
            android:textColor="#FFFFFF"
            android:inputType="text"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_input"
            >

        </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#989898"
            style="@style/AppTheme"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableStart="@drawable/custom_lock"
                android:drawablePadding="12dp"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword"
                tools:text="123456"
                android:maxLength="15"
                android:textColor="@color/white"
                android:background="@drawable/custom_input"
               >
            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.avash.notekeeper.utlis.MSPTextViewBold
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_gravity="right"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/lbl_forgot_password"
            android:textColor="#D1D7DF"
            android:textSize="@dimen/forgot_password_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <com.avash.notekeeper.utlis.NKButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_bg"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.avash.notekeeper.utlis.MSPTextView
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/don_t_have_an_account"
            android:textColor="#FDFDFD"
            android:textSize="@dimen/lbl_text_view_textSize" />

        <com.avash.notekeeper.utlis.MSPTextViewBold
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="@dimen/lbl_text_view_textSize" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
